--- a/Final Boss.css
+++ b/Final Boss.css
@@ -3,7 +3,7 @@ body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ff0000;
+    background-color: #000000;
 }
 
 header {
