--- a/Final Boss.css
+++ b/Final Boss.css
@@ -97,7 +97,7 @@ section {
     width: 300px;
     margin: 10px;
     padding: 10px;
-    border: 1px solid #ff0000;
+    border: 1px solid #ffffff;
     text-align: center;
 }
 
