--- a/Final Boss.css
+++ b/Final Boss.css
@@ -7,8 +7,8 @@ body {
 }
 
 header {
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #000000;
     padding: 20px;
     text-align: center;
 }
